<resources>
    <string name="app_name">脆饼旅行</string>
    <string name="app_slogan">多一个朋友,多一种生活</string>
    <string name="loading_text">加载中&#8230;</string>
    <string name="load_error">网络异常</string>
    <string name="parameter_error">参数错误</string>
    <string name="network_data_error">获取数据失败，请稍后再试</string>
    <string name="ct_login_failed">登录失败，请登录后重试</string>
    <string name="ct_upload_failed">上传失败，请重试</string>
    <string name="ct_confirm">确定</string>
    <string name="ct_cancel">取消</string>
    <string name="ct_finish">完成</string>
    <string name="ct_exit_tip">再按一次退出脆饼旅行</string>
    <string name="ct_recommend">推荐</string>
    <string name="ct_message">聊天</string>
    <string name="ct_order">预订</string>
    <string name="ct_my">我的</string>
    <string name="ct_at_travel">在旅行</string>
    <string name="ct_at_finder">在发现</string>
    <string name="ct_empty_messae">你还没有消息</string>
    <string name="ct_trip_messae">旅程：</string>
    <string name="ct_trip_no_order_title">您的旅程</string>
    <string name="ct_trip_no_order_message">如果您已经确认了旅程，将会在这里看到</string>
    <string name="ct_trip_no_order_recommend">来看看推荐旅程吧</string>
    <string name="ct_trip_share">#台湾自由行# 我在@脆饼旅行 发现一个很有趣的旅程《%1$s》，感兴趣的朋友看看吧</string>
    <string name="ct_no_login">您还没有登录</string>
    <string name="ct_no_login_hint">请点击下面按钮登录</string>
    <string name="ct_no_login_click">点击登录</string>
    <string name="ct_no_finish">开发中，敬请期待...</string>
    <string name="ct_hot_recommend">热门推荐</string>
    <string name="ct_watch_detail">了解整个旅程</string>
    <string name="ct_author_register_time">注册时间</string>
    <string name="ct_author_identification">资料验证</string>
    <string name="ct_author_career">职业</string>
    <string name="ct_author_interest">兴趣</string>
    <string name="ct_author_language">语言</string>
    <string name="ct_service_introduce">旅程说明</string>
    <string name="ct_service_order_date">可预约日期</string>
    <string name="ct_service_date_click">查看日期</string>
    <string name="ct_service_duration">游玩时间</string>
    <string name="ct_service_best_time">最佳时间</string>
    <string name="ct_service_max_person">可接待人数</string>
    <string name="ct_service_bill">费用说明</string>
    <string name="ct_cuitrip_gongyue">脆饼公约</string>
    <string name="ct_cuitrip_view_all">查看所有</string>
    <string name="ct_cuitrip_book">立即预约</string>
    <string name="ct_cuitrip_comment_count">条评论</string>
    <string name="ct_cuitrip_comment_no">暂无评论</string>
    <string name="ct_cuitrip_renzheng">已由脆饼旅行认证身份</string>
    <string name="ct_cuitrip_renzheng_no">未认证</string>
    <string name="ct_cuitrip_book_date">可约日期</string>
    <string name="ct_detail_desc">详情描述</string>
    <string name="ct_all_reviews">所有评价</string>
    <string name="ct_service_date_selected">选择时间</string>
    <string name="ct_service_date_title">%1$s年%2$s月</string>
    <string name="ct_order_date">日期</string>
    <string name="ct_order_person">人数</string>
    <string name="ct_order_bill">费用</string>
    <string name="ct_order_select_date">选择日期</string>
    <string name="ct_order_select_person_count">选择人数</string>
    <string name="ct_create_order">提交预约</string>
    <string name="ct_create_order_null_date">请选择日期</string>
    <string name="ct_create_order_null_person">请选择人数</string>
    <string name="ct_create_order_suc_tip">您的预约已经发送给发现者\n你可以在消息中关注最新的反馈信息</string>
    <string name="ct_go_to_order">前往旅程</string>
    <string name="ct_order_contact">联系TA</string>
    <string name="ct_order_order_date">预约日期</string>
    <string name="ct_order_detail_person">约定人数</string>
    <string name="ct_order_detail_bill">订单费用</string>
    <string name="ct_order_my_comment">我的评价</string>
    <string name="ct_order_cancel">取消预订</string>
    <string name="ct_order_cancel_suc">旅程取消成功</string>
    <string name="ct_order_modify">修改预约</string>
    <string name="ct_order_modify_confirm">修改预约</string>
    <string name="ct_order_cancel_confir">确认取消</string>
    <string name="ct_order_cancel_reason">请了解退订条款,并详细填写取消的原因&#32;&#32;(不超过1000个字)</string>
    <string name="ct_go_order_list">返回</string>
    <string name="ct_go_recommend">查看其他推荐</string>
    <string name="ct_cancel_null_reason">请填写取消原因</string>
    <string name="ct_cancel_suc">取消成功</string>
    <string name="ct_order_start">您的旅程已经开始了，享受旅程吧！</string>
    <string name="ct_order_start_tip">在旅程中遇到的问题请点击右上角“联系脆饼”与我们取得联系</string>
    <string name="ct_call_phone_fail">无法自动转到拨号应用，请拨打 </string>
    <string name="ct_null_phone_num">暂无电话 </string>
    <string name="ct_order_comment">评价</string>
    <string name="ct_order_comment_tip">为你的发现者写段评价吧!</string>
    <string name="ct_order_comment_hint">说说您的感受吧！</string>
    <string name="ct_order_comment_commit">提交评价</string>
    <string name="ct_order_comment_suc">评价成功</string>
    <string name="ct_order_comment_thanks">感谢您的评价!\n把您的旅程分享给小伙伴吧~</string>
    <string name="ct_order_comment_share">分享给小伙伴吧~</string>
    <string name="ct_order_me">我</string>
    <string name="ct_order_confirm">你要确认该预订吗？</string>
    <string name="ct_order_refuse">你要确认拒绝预订吗？</string>
    <string name="ct_order_refuse_suc">预订已拒绝</string>
    <string name="ct_order_confirm_suc">预订确认成功</string>
    <string name="ct_order_begin_suc">旅程已开始</string>
    <string name="ct_order_end_suc">旅程已成功结束</string>
    <string name="ct_message_go_order">查看旅程</string>
    <string name="ct_message_send">发送</string>
    <string name="ct_order_cancel_successed">你的行程已取消！</string>
    <string name="ct_cancel_rule_little"></string>
    <string name="ct_message_travel_cancel_little" formatted="false">
如果您需要取消预订，请尽快进行操作。\n
取消预订会对发现者的行程安排造成一定的影响，因此不是由于情有可原的情况而取消预订都将扣取一定的费用。
    </string>
      <string name="ct_message_finder_cancel_little" formatted="false">
如果您需要取消旅行者的预订，请尽快进行操作。\n
取消预订会对旅行者的旅程造成严重影响，因此不是由于情有可原的情况而取消预订都将受到处罚。
    </string>
     <string name="ct_message_travel_cancel" formatted="false">
	<![CDATA[<p>如果您需要取消预订，请尽快进行操作。</p>
 
<p>取消预订会对发现者的行程安排造成一定的影响，因此不是由于情有可原的情况而取消预订都将扣取一定的费用。</p>
 
<p>·如果您在旅程开始的48小时或以上时间取消预订，将会扣取已支付费用的10%。</p>
<p>·如果您在旅程开始的48小时内取消预订，将会扣取已支付费用的50%。</p>
<p>·如果您在旅程开始的24小时内取消预订，将不会退还已支付的费用。</p>
<p>·余下的费用将会在7个工作日内自动退还至您的账户。</p>
<p>·如果您使用了优惠体验码，体验码将失效，只退还您现金支付的对应费用。</p>

<p>如果有其他特殊原因，请<font color="#00ccdd"> <a onclick="jumper.jumpConcat()">联系脆饼</a></font></p>
]]>
    </string>
      <string name="ct_message_finder_cancel" formatted="false">
	<![CDATA[<p>如果您需要取消旅行者的预订，请尽快进行操作。</p>
<p>取消预订会对旅行者的旅程造成严重影响，因此不是由于情有可原的情况而取消预订都将受到处罚。</p>

<p>·扣取取消费用：如果您在行程开始的48小时或以上时间取消预订，将会被收取原预订价格50%的费用。我们将会自动从您的下一笔收款中扣除这笔款项，如果下一笔收款不满这笔费用，继续再从下一笔收款中扣除，直到扣取完成。</p>
<p>·自动评价：您的行程评价页面将自动出现一条评价，指出您取消了一次预订。
<p>·日历上的对应日期将被屏蔽，不可再被预订。您的日历将会保持屏蔽状态，因此被取消预订的所属日期无法接受其他预订。</p>

<p>情有可原的情况</p>
<p>如果出现极为罕见的情有可原的情况，您可能会需要取消已确认的预订。在这种情况下，我们可能会放弃执行服务条款中列出的取消预订处罚条例。要裁定是否属于情有可原的情况，您需要提供适当且有效的证明文件。这些情况包括：</p>
<p>·家人去世</p>
<p>·自己或家人患重疾</p>
<p>·国内发生自然灾难</p>
<p>·国内发生政治动乱</p>
<p>·旅行目的地发生严重毁坏或处于停业状态</p>

<p>如果有其他特殊原因，请<font color="#00ccdd"> <a onclick="jumper.jumpConcat()">联系脆饼</a></font></p>
]]>
    </string>
    <string name="ct_cancel_rule_detail_title">
        详细条款
    </string>
    <string name="ct_yestoday">昨天</string>
    <string name="ct_sun">日</string>
    <string name="ct_mon">一</string>
    <string name="ct_tues">二</string>
    <string name="ct_wed">三</string>
    <string name="ct_thur">四</string>
    <string name="ct_fri">五</string>
    <string name="ct_sat">六</string>
    <string name="ct_can_book">可以预订</string>
    <string name="ct_booked">不可预订</string>
    <string name="ct_country">国家/地区</string>
    <string name="ct_mobile_hint">请输入手机号</string>
    <string name="ct_mobile_vcode">请输入验证码</string>
    <string name="ct_get_vcode">获取验证码</string>
    <string name="ct_mobile_passwd">请输入新密码</string>
    <string name="ct_mobile_new_passwd">请输入新密码</string>
    <string name="ct_mobile_again">请再次输入密码</string>
    <string name="ct_ok">确认</string>
    <string name="ct_modify_suc">密码修改成功</string>
    <string name="ct_mobile_nick">请输入昵称</string>
    <string name="ct_register_confirm">注册</string>
    <string name="ct_register">注册</string>
    <string name="ct_register_head">我已阅读并同意</string>
    <string name="ct_register_mid">脆饼使用条款和隐私政策</string>
    <string name="ct_register_vcode_suc">验证码已发送，请注意查收</string>
    <string name="ct_gongyue">脆饼公约</string>
    <string name="ct_null_phone">请填写手机号码</string>
    <string name="ct_null_vcode">请填写验证码</string>
    <string name="ct_null_nick">请填写昵称</string>
    <string name="ct_null_country">请选择国家</string>
    <string name="ct_null_passwd">请填写密码</string>
    <string name="ct_error_phone">请填写正确的手机号码</string>
    <string name="ct_geting_vcode">获取中&#8230;</string>
    <string name="ct_registerd_suc">注册成功</string>
    <string name="ct_registerd_suc_login">注册成功,请登录</string>
    <string name="ct_login_suc">登录成功</string>
    <string name="ct_login">登录</string>
    <string name="ct_login_confirm">登录</string>
    <string name="ct_login_forget">忘记密码？</string>
    <string name="ct_login_go_regist">注册新帐号</string>
    <string name="ct_login_find_passed">找回密码</string>
    <string name="ct_login_input_pw_again">请再次输入密码</string>
    <string name="ct_find_suc">找回密码成功</string>
    <string name="ct_find_suc_login">找回密码成功成功,请重新登录</string>
    <string name="ct_login_find_now">立即找回</string>
    <string name="ct_login_out">退出登录</string>
    <string name="ct_setting">设置</string>
    <string name="ct_profile">关于我</string>
    <string name="ct_homepage">我的主页</string>
    <string name="ct_homepage_eidt">介绍自己</string>
    <string name="ct_id">身份认证</string>
    <string name="ct_friends">邀请朋友</string>
    <string name="ct_help">帮助</string>
    <string name="ct_to_finder">切换到发现者模式</string>
    <string name="ct_modify_pass">修改密码</string>
    <string name="ct_about">关于脆饼</string>
    <string name="ct_relation_us">联系脆饼</string>
    <string name="ct_profile_title_name">头像</string>
    <string name="ct_profile_title_realname">真实姓名</string>
    <string name="ct_profile_hint_realname">请填写真实姓名</string>
    <string name="ct_profile_title_nick">昵称</string>
    <string name="ct_profile_hint_nick">您的昵称</string>
    <string name="ct_profile_title_gender">性别</string>
    <string name="ct_profile_hint_gender">请选择性别</string>
    <string name="ct_profile_title_area">所在国家/地区</string>
    <string name="ct_profile_hint_area">请填写地区</string>
    <string name="ct_profile_title_job">职业</string>
    <string name="ct_profile_hint_job">请填写职业</string>
    <string name="ct_profile_title_hobby">爱好</string>
    <string name="ct_profile_hint_hobby">您的兴趣爱好</string>
    <string name="ct_profile_title_language">语言</string>
    <string name="ct_profile_hint_language">您会哪些语言</string>
    <string name="ct_profile_title_sign">签名</string>
    <string name="ct_profile_hint_sign">您的个性签名</string>
    <string name="order_person_real_name">真实姓名</string>
    <string name="order_person_birth">出生年月</string>
    <string name="order_person_gender">性别</string>
    <string name="order_person_carrer">职业</string>
    <string name="order_person_hobby">爱好</string>
    <string name="order_person_language">语言</string>
    <string name="order_person_sign">签名</string>
    <string name="ct_price_desc_message">脆饼支持3种计费方式，请选择适合您的方式：</string>
    <string name="price_include_input_hint">费用包含：</string>
    <string name="price_uninclude_input_hint">费用不包含：</string>
    <string name="price_include_input_hint_et">请描述费用包含项目</string>
    <string name="price_uninclude_input_hint_et">请描述必要的的费用所不包括的项目</string>
    <string name="price_way_all">一口价</string>
    <string name="price_way_per">按人计费</string>
    <string name="price_way_free">免费</string>
    <string name="ct_price_payway_all_detail_msg">在您接收的人数范围内，无论旅行者有几人都只收取一个费用，您需要设定一个最终费用。</string>
    <string name="ct_price_payway_per_detail_msg">在您可接待的人数范围内，按参加的人数收取费用，您需要设定单人费用。</string>
    <string name="ct_price_payway_free_detail_msg">您将提供免费的旅程体验，不收取任何费用。</string>
    <string name="price_desc">明确的费用说明对保障您和旅行者的权益至关重要。我们建议您给出更详细的费用说明，帮助旅行者更好的了解您的服务。</string>
    <string name="cash_unit">货币</string>
</resources>