<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ct_white"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/ct_common_bg"
        android:text="@string/ct_price_desc_message"/>
    <RadioGroup
        android:layout_marginLeft="8dp"
        android:id="@+id/ct_price_payway_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/ct_price_payway_free_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/ct_main_color"
            android:text="@string/price_way_free"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ct_a7"
            android:textSize="13sp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/ct_price_payway_free_detail_msg"/>
        <View style="@style/ctDivider"
            android:layout_marginBottom="10dp"/>
        <RadioButton
            android:id="@+id/ct_price_payway_all_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/ct_main_color"
            android:text="@string/price_way_all" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ct_a7"
            android:textSize="13sp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="35dp"
            android:text="@string/ct_price_payway_all_detail_msg"/>
        <View style="@style/ctDivider"
            android:layout_marginBottom="10dp"/>
        <RadioButton
            android:id="@+id/ct_price_payway_per_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/ct_main_color"
            android:text="@string/price_way_per"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/ct_a7"
            android:textSize="13sp"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/ct_price_payway_per_detail_msg"/>
        <View style="@style/ctDivider"
            android:layout_marginBottom="10dp"/>
    </RadioGroup>
    <View
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/ct_alpha_black"/>
</LinearLayout>